--- a/UI/Style.css
+++ b/UI/Style.css
@@ -324,5 +324,65 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+.label, #Settings_title{
+    font-family: 'Poppins', sans-serif;
+    color: white;
+}
+#GeneralTitle, #PrivateKeyTitle, #TelegramBotTitle{
+    float: right;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+}
+#KeySizeConst{
+    width: 70px;
+    margin-top: 27.5px;
+    margin-left: 10px;
+}
+.first_labels{
+    font-family: 'Poppins', sans-serif;
+    padding-top: 35px;
+    color: white;
+}
+tr {
+    display: inline-block 
+}
+#Save_Changes_Button{
+    background-color: #28a745;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
+#regenerate_button{
+    margin-left: 9%;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 7.5px;
+}
+#import_button{
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 7.5px;
+    margin-left: 30px;
+}
+#bot_api{
+    margin-left: 7.5%;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 25px;
+    width: 120px;
+}
+#exampleInputNickname{
+    margin-top: 25px;
+    width: 280px;
+    margin-left: 15px;
+}
+#exampleInputPassword{
+    margin-bottom: 33px;
+    width: 280px;
+    margin-left: 17px;
+}
+#KeyHash{
+    margin-bottom: 7px;
+    width: 340px;    
+}
+#KeyHashAlert{
+    width: 85px;
+}
 
 /* QRCode Item Modal END */
